--- a/package.json
+++ b/package.json
@@ -6,11 +6,31 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "gatsby": "^2.21.21",
     "gatsby-cli": "^2.12.15",
+    "gatsby-image": "^2.2.8",
+    "gatsby-plugin-manifest": "^2.2.4",
+    "gatsby-plugin-offline": "^2.2.4",
+    "gatsby-plugin-react-helmet": "^3.1.3",
+    "gatsby-plugin-sharp": "^2.2.9",
+    "gatsby-plugin-transition-link": "^1.12.4",
+    "gatsby-source-filesystem": "^2.1.8",
+    "gatsby-transformer-sharp": "^2.2.5",
+    "gatsby-transformer-yaml": "^2.2.4",
     "gh-pages": "^2.2.0",
+    "gsap": "^2.1.3",
+    "jquery": "^3.4.1",
+    "popper.js": "^1.15.0",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "react-dom": "^16.13.1",
+    "react-helmet": "^5.2.1",
+    "react-icons": "^3.7.0",
+    "reactstrap": "^8.4.1"
+  },
+  "devDependencies": {
+    "prettier": "^1.18.2"
   },
   "scripts": {
     "build": "yarn gatsby build",
